[build-system]
requires = [
    "setuptools>=80.4.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project]
name = "mfd-kvm"
description = "Module for managing KVM hypervisors, enabling VM creation, control, and network device management."
requires-python = ">=3.10, <3.14"
version = "3.12.0"
dynamic = ["dependencies"]
license-files = ["LICENSE.md", "AUTHORS.md"]
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Homepage = "https://github.com/intel/mfd"
Repository = "https://github.com/intel/mfd-kvm"
Issues = "https://github.com/intel/mfd-kvm/issues"
Changelog = "https://github.com/intel/mfd-kvm/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
exclude = ["examples", "tests*", "sphinx-doc"]

[tools.setuptools.package-data]
"mfd_kvm" = ["*.xml"]